welcome.lessons.welcome.array.island.Island.scala.error
island:10: error: ambiguous reference to overloaded definition,
both method - in class Int of type (x: Char)Int
and  method - in class Int of type (x: Byte)Int
match expected type ?
    if (temp-2=tab(i)) {temp=temp-2}
            ^